@@ -1,0 +1,30 @@
+# Test handling of names and comments.
+
+test=names-comments-1
+
+source ./test-utils.sh
+
+cpu_file=${test}.test.cpu
+rm -f ${cpu_file}
+
+cat > ${cpu_file} <<EOF
+(include "${srcdir}/../cpu/simplify.inc")
+(include "${srcdir}/testsuite.cpu")
+
+(define-insn (name (add 3))
+             (comment (("This is a" " comment")
+                       " constructed as a list."))
+             (syntax "add3")
+	     (semantics (sequence VOID nop))
+)
+
+;; Verify the correct insn got created.
+;; ??? Also need to verify the comment's contents.
+(internal-verify "lists in names" (current-insn-lookup 'add3))
+EOF
+
+run_cgen ${cpu_file}
+
+post_process
+
+finish
